--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 /node_modules
+/templates/*/node_modules
+/templates/*/logs
+/templates/*/_.log
+/templates/*/npm-debug.log_
+/templates/*/yarn-debug.log*
+/templates/*/yarn-error.log*
+/templates/*/lerna-debug.log\*
+/templates/*/package-lock.json
+/templates/*/yarn.lock
