--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "main": "./index.js",
   "bin": "./index.js",
   "name": "ts-tipi",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "typescript is <3",
   "scripts": {
     "start": "node index.js"
@@ -25,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/Gers2017/ts-tipi/issues"
   },
-  "homepage": "https://github.com/Gers2017/ts-tipi#readme"
+  "homepage": "https://github.com/Gers2017/ts-tipi#readme",
+  "devDependencies": {
+    "chalk": "^4.1.2"
+  }
 }
