--- a/templates/ts-node/tsconfig.json
+++ b/templates/ts-node/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "CommonJS",
-    "lib": ["ES6", "ES2017", "ESNext.AsyncIterable"],
+    "lib": ["DOM", "ES6", "ES2017", "esnext.asynciterable"],
     "skipLibCheck": true,
     "noImplicitAny": true,
+    "sourceMap": true,
     "removeComments": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
