--- a/templates/nodemon-watch/tsconfig.json
+++ b/templates/nodemon-watch/tsconfig.json
@@ -1,30 +1,27 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "commonjs",
-    "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
+    "target": "ES6",
+    "module": "CommonJS",
+    "lib": ["dom", "ES6", "ES2017", "esnext.asynciterable"],
     "skipLibCheck": true,
-    "downlevelIteration": true,
-    "sourceMap": true,
     "outDir": "./dist",
+    "sourceMap": true,
     "moduleResolution": "node",
-    "removeComments": true,
     "noImplicitAny": true,
+    "removeComments": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "allowJs": true,
-    "strict": true
+    "checkJs": true,
+    "baseUrl": "."
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["src/**/*", "tests/**/*"]
 }
