fix ts-node tsconfig

--- a/templates/nodemon-watch/tsconfig.json
+++ b/templates/nodemon-watch/tsconfig.json
@@ -20,7 +20,8 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "checkJs": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "downlevelIteration": true
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*", "tests/**/*"]
