--- a/templates/ts-node/tsconfig.json
+++ b/templates/ts-node/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "ES6",
     "module": "commonjs",
     "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
     "skipLibCheck": true,
-    "downlevelIteration": true,
     "sourceMap": true,
-    "outDir": "./dist",
     "moduleResolution": "node",
     "removeComments": true,
     "noImplicitAny": true,
@@ -19,12 +17,11 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
     "allowJs": true,
-    "strict": true
+    "strict": true,
+    "downlevelIteration": true,
+    "experimentalDecorators": true
   },
   "exclude": ["node_modules"]
 }
