Replace package.json
- use one base template
- supports ts-node-dev and nodemon
- add prettier
- remove eslint
- change namess on ignore.js
- add core.js

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 /node_modules
-/templates/*/node_modules
-/templates/*/dist/*.js
-/templates/*/*.log
-/templates/*/npm-debug.log*
-/templates/*/npm-debug.log*
-/templates/*/yarn-debug.log*
-/templates/*/yarn-error.log*
-/templates/*/lerna-debug.log*
-/templates/*/package-lock.json
-/templates/*/yarn.lock
-/templates/*/.pnpm-debug.log*
+/templates/ts-template/node_modules
+/templates/ts-template/dist/
+/templates/ts-template/*.log
+/templates/ts-template/npm-debug.log*
+/templates/ts-template/yarn-debug.log*
+/templates/ts-template/yarn-error.log*
+/templates/ts-template/lerna-debug.log*
+/templates/ts-template/package-lock.json
+/templates/ts-template/yarn.lock
+/templates/ts-template/.pnpm-debug.log*
+/templates/ts-template/*.tsbuildinfo
+/templates/ts-template/*.js.map
+/.idea
+/.vscode
