--- a/templates/ts-template/tsconfig.json
+++ b/templates/ts-template/tsconfig.json
@@ -1,28 +1,32 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "CommonJS",
-    "lib": ["dom", "ES6", "ES2017", "esnext.asynciterable"],
+    /* Visit https://aka.ms/tsconfig.json to read more about this file */
+    "incremental": true,
+    "target": "esnext",
+    "module": "commonjs",
+    "lib": ["dom", "es6", "esnext", "esnext.asynciterable"],
     "skipLibCheck": true,
-    "outDir": "./dist",
     "sourceMap": true,
+    "outDir": "./dist",
     "moduleResolution": "node",
-    "noImplicitAny": true,
     "removeComments": true,
+    "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
+    "allowJs": true,
     "checkJs": true,
-    "baseUrl": ".",
-    "downlevelIteration": true
+    "baseUrl": "."
   },
-  "exclude": ["node_modules"],
-  "include": ["src/**/*", "tests/**/*"]
+  "include": ["./src/**/*.ts", "tests/**/*.ts"],
+  "exclude": ["node_modules"]
 }
