--- a/templates/apollo-server/package.json
+++ b/templates/apollo-server/package.json
@@ -24,5 +24,9 @@
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "apollo-server": "^3.3.0",
+    "graphql": "^15.6.1"
   }
 }
