--- a/templates/express/package.json
+++ b/templates/express/package.json
@@ -18,11 +18,15 @@
   "author": "ts-tipi",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.4.1",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
